Added POST to swagger
